Fix of visiblity of editable block in Chrome

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,3 +24,8 @@ body{
 .form-group div{
   display: inline;
 }
+
+.editable-container
+{
+  display: inline-block;
+}
